--- a/templates/composite_bg_elimination_1.html
+++ b/templates/composite_bg_elimination_1.html
@@ -11,16 +11,26 @@
         <div class="background-image"></div>
         
         <div class="header">
-            <div class="tournament-name {{ name_class }}">{{ tournament_name }}</div>
+            <!--  <div class="tournament-name {{ name_class }}">{{ tournament_name }}</div> -->
+			<div class="tournament-name {{ name_class }}">Рейтинговый турнир "Битва за стеклом" на призы RCC Padel, ФПР 100</div>
             <div class="logos">
-                <div class="logo logo4" style="background-image: url('/static/images/logo4.png');"></div>
+
                 <div class="logo logo3" style="background-image: url('/static/images/logo3.png');"></div>
                 <div class="logo logo2" style="background-image: url('/static/images/logo2.png');"></div>
                 <div class="logo logo1" style="background-image: url('/static/images/logo1.png');"></div>
             </div>
+			
+			        <div class="header-line"></div>
+
         </div>
-        
-        <div class="header-line"></div>
+
+
+					<div class="olimpic_9_10" style="position: absolute; z-index: 10;">МЕСТА 1-4</div>
+					<div class="olimpic_3_4"  style="position: absolute; z-index: 10;">МЕСТА 3-4</div>
+					<div class="olimpic_5_8"  style="position: absolute; z-index: 10;">МЕСТА 5-8</div>
+
+					<div class="olimpic_FIN" style="position: absolute; z-index: 10;">ПОБЕДИТЕЛЬ</div>        
+
     </div>
 </body>
 </html>
