--- a/templates/composite_bg_round_3.html
+++ b/templates/composite_bg_round_3.html
@@ -3,24 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1920, height=1080">
-    <title>Round Robin 3 - {{ tournament_name }}</title>
-    <link rel="stylesheet" href="/static/css/composite_bg_round_3.css">
+    <title>Elimination 1 - {{ tournament_name }}</title>
+    <link rel="stylesheet" href="/static/css/composite_bg_elimination_1.css">
 </head>
 <body>
     <div class="composite-bg">
         <div class="background-image"></div>
         
         <div class="header">
-            <div class="tournament-name {{ name_class }}">{{ tournament_name }}</div>
+            <!--  <div class="tournament-name {{ name_class }}">{{ tournament_name }}</div> -->
+			<div class="tournament-name {{ name_class }}">Рейтинговый турнир "Битва за стеклом" на призы RCC Padel, ФПР 100</div>
             <div class="logos">
-                <div class="logo logo4" style="background-image: url('/static/images/logo4.png');"></div>
+
                 <div class="logo logo3" style="background-image: url('/static/images/logo3.png');"></div>
                 <div class="logo logo2" style="background-image: url('/static/images/logo2.png');"></div>
                 <div class="logo logo1" style="background-image: url('/static/images/logo1.png');"></div>
             </div>
+			
+			        <div class="header-line"></div>
+
         </div>
-        
-        <div class="header-line"></div>
+
+
+					<div class="olimpic_9_10" style="position: absolute; z-index: 10;">МЕСТА 9-12</div>
+      
+
     </div>
 </body>
 </html>
